@@ -1,3 +1,8 @@
+2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* WelcomePageFallbackWidget.cs: Disable the welcome page while projects
+	are loading.
+
 2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* WelcomePageFallbackWidget.cs: Remove unnecessary check.
